--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
             Registration
           </button>
           <div id="dropdown-content" class="dropdown-content">
-            <button onclick="window.location.href='Customer.html'">
+            <button onclick="window.location.href='customer.html'">
               Customer
             </button>
             <button onclick="window.location.href='Delivery.html'">
