--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
       <div class="navbar-brand">
         <img
           class="img"
-          src="../ResturentApp/khanadotcom.jpg"
+          src="khanadotcom.jpg"
           alt="random"
           height="50px"
           width="50px" />
