--- a/index.html
+++ b/index.html
@@ -143,6 +143,7 @@
             </button>
           </div>
         </div>
+        <a href="#">Login</a>
       </div>
     </div>
     <!-- Add your content here -->
