--- a/index.html
+++ b/index.html
@@ -73,6 +73,11 @@
         width: 99vw;
       }
 
+      .text {
+        text-align: center;
+        width: 600px;
+        margin: 300px auto;
+      }
       /* Responsive adjustments */
       @media screen and (max-width: 768px) {
         .navbar {
@@ -143,14 +148,10 @@
             </button>
           </div>
         </div>
-        <a href="#">Login</a>
+        <a href="userform/Login.html">Login</a>
       </div>
     </div>
     <!-- Add your content here -->
-
-    <img
-      class="home"
-      src="https://img.freepik.com/free-vector/flat-restaurant-interior_23-2147538450.jpg?t=st=1717734107~exp=1717737707~hmac=b38ece19e571560ce2b48b5b001cc27ea0df8b722e0e49d2f75df46a0a5646e0&w=740 "
-      alt="random" />
+    <h1 class="text">Welcome to Khanadotcom.</h1>
   </body>
 </html>
