--- a/userform/Login.html
+++ b/userform/Login.html
@@ -75,7 +75,7 @@
         <div class="form-group">
           <input type="submit" value="Login" />
         </div>
-        <a href="/userform/Signup.html">Signup ?</a>
+        <a href="Signup.html">Signup ?</a>
       </form>
     </div>
   </body>
