--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
 
       .text {
         text-align: center;
-        width: 600px;
-        margin: 300px auto;
+        width: 100%;
+        margin: 200px auto;
       }
       /* Responsive adjustments */
       @media screen and (max-width: 768px) {
