--- a/userform/Login.html
+++ b/userform/Login.html
@@ -15,12 +15,12 @@
         background-color: #caf0f8;
       }
       .registration-form {
-        margin-top: 100px;
+        margin: 20px;
         background: #fff;
         padding: 20px;
         border-radius: 5px;
         box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        width: 40%;
+        width: 50%;
       }
       .registration-form h2 {
         margin-bottom: 20px;
