--- a/index.html
+++ b/index.html
@@ -129,9 +129,9 @@
           width="50px" />
       </div>
       <div class="navbar-links">
-        <a href="#">Home</a>
+        <a href="/">Home</a>
         <a href="#">About</a>
-        <a href="#">Contact</a>
+        <a href="/contactus.html">Contact</a>
         <div class="dropdown">
           <button class="registration-button" onclick="toggleDropdown()">
             Registration
