--- a/Delivery.html
+++ b/Delivery.html
@@ -23,7 +23,7 @@
       h2 {
         text-align: center;
         margin: 20px 10px;
-        background-color: #f8ad9d;
+        background-color: #88d7eb;
         padding: 10px;
         border-radius: 5px;
       }
