--- a/userform/Login.html
+++ b/userform/Login.html
@@ -4,56 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>User Registration Form</title>
-    <style>
-      body {
-        font-family: Arial, sans-serif;
-        background-color: #f4f4f4;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        margin: auto;
-        background-color: #caf0f8;
-      }
-      .registration-form {
-        margin: 20px;
-        background: #fff;
-        padding: 20px;
-        border-radius: 5px;
-        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        width: 60%;
-      }
-      .registration-form h2 {
-        margin-bottom: 20px;
-        font-size: 24px;
-        text-align: center;
-        background-color: aquamarine;
-        padding: 10px;
-        border-radius: 5px;
-      }
-      .registration-form .form-group {
-        margin-bottom: 15px;
-      }
-      .registration-form .form-group label {
-        display: block;
-        margin-bottom: 5px;
-      }
-      .registration-form .form-group input {
-        width: calc(100% - 10px);
-        padding: 10px 5px;
-        font-size: 16px;
-        border: 1px solid #ddd;
-        border-radius: 5px;
-      }
-      .registration-form .form-group input[type="submit"] {
-        background: #28a745;
-        color: #fff;
-        border: none;
-        cursor: pointer;
-      }
-      .registration-form .form-group input[type="submit"]:hover {
-        background: #218838;
-      }
-    </style>
+    <link rel="stylesheet" href="Login.css" />
   </head>
   <body>
     <div class="registration-form">
@@ -75,7 +26,7 @@
         <div class="form-group">
           <input type="submit" value="Login" />
         </div>
-        <a href="Signup.html">Signup ?</a>
+        <a href="Signup.html">Don't have an account ? Register here</a>
       </form>
     </div>
   </body>
