--- a/Restaurant.html
+++ b/Restaurant.html
@@ -4,81 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Restaurant Join Us Form</title>
-    <style>
-      body {
-        font-family: Arial, sans-serif;
-        background-color: #f4f4f4;
-        margin: 0;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-      }
-      .form-container {
-        background-color: white;
-        padding: 20px;
-        border-radius: 8px;
-        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        width: 100%;
-        max-width: 60%;
-      }
-      .form-container h2 {
-        text-align: center;
-        margin-bottom: 20px;
-        background-color: aquamarine;
-        padding: 10px;
-        margin: 10px;
-        border-radius: 5px;
-      }
-      .form-group {
-        margin-bottom: 15px;
-      }
-      .form-group label {
-        display: block;
-        margin: 2px 10px;
-        font-weight: bold;
-      }
-      .form-group input,
-      .form-group textarea,
-      .form-group select {
-        width: calc(100% - 20px);
-        padding: 10px;
-        margin: 2px 10px;
-        border: 1px solid #ccc;
-        border-radius: 4px;
-        box-sizing: border-box;
-      }
-      .form-group textarea {
-        resize: vertical;
-      }
-      .form-group button {
-        background-color: #007bff;
-        color: white;
-        border: none;
-        padding: 10px 20px;
-        border-radius: 4px;
-        cursor: pointer;
-        width: 100%;
-        font-size: 16px;
-      }
-      .form-group button:hover {
-        background-color: #0056b3;
-      }
-      @media (max-width: 600px) {
-        .form-container {
-          padding: 15px;
-        }
-        .form-group input,
-        .form-group textarea,
-        .form-group select {
-          width: calc(100% - 15px);
-          padding: 8px;
-        }
-        .form-group button {
-          padding: 8px 16px;
-          font-size: 14px;
-        }
-      }
-    </style>
+    <link rel="stylesheet" href="Restaurent.css" />
   </head>
   <body>
     <div class="form-container">
