--- a/customer.html
+++ b/customer.html
@@ -4,98 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Customer Details Form</title>
-    <style>
-      body {
-        font-family: Arial, sans-serif;
-        background-color: #f4f4f4;
-        padding: 10px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        margin: 20px;
-      }
-      .form-container {
-        background-color: white;
-        padding: 20px;
-        border-radius: 8px;
-        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        width: 100%;
-        max-width: 60%;
-      }
-      .form-container h2 {
-        text-align: center;
-        margin-bottom: 20px;
-        background-color: #15616d;
-        padding: 10px;
-        border-radius: 5px;
-        color: white;
-      }
-      .form-group {
-        margin-bottom: 15px;
-      }
-      .form-group label {
-        display: block;
-        margin-bottom: 5px;
-        font-weight: bold;
-      }
-      .form-group input,
-      .form-group select,
-      .form-group textarea {
-        width: 95%;
-        padding: 10px;
-        margin-bottom: 10px;
-        border: 1px solid #ccc;
-        border-radius: 4px;
-      }
-      .form-group textarea {
-        resize: vertical;
-      }
-      .form-group button {
-        background-color: #28a745;
-        color: white;
-        border: none;
-        padding: 10px 20px;
-        border-radius: 4px;
-        cursor: pointer;
-        width: 100%;
-        font-size: 16px;
-      }
-      .form-group button:hover {
-        background-color: #218838;
-      }
-
-      @media (max-width: 768px) {
-        .form-container {
-          max-width: 80%;
-          padding: 15px;
-        }
-        .form-group input,
-        .form-group select,
-        .form-group textarea {
-          padding: 8px;
-        }
-        .form-group button {
-          padding: 10px;
-          font-size: 14px;
-        }
-      }
-
-      @media (max-width: 480px) {
-        .form-container {
-          max-width: 100%;
-          padding: 10px;
-        }
-        .form-group input,
-        .form-group select,
-        .form-group textarea {
-          padding: 6px;
-        }
-        .form-group button {
-          padding: 8px;
-          font-size: 12px;
-        }
-      }
-    </style>
+    <link rel="stylesheet" href="customer.css" />
   </head>
   <body>
     <div class="form-container">
