--- a/index.html
+++ b/index.html
@@ -3,155 +3,56 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Registration</title>
-    <style>
-      body {
-        font-family: Arial, sans-serif;
-        background-color: #f4f4f4;
-        width: 100vw;
-        margin: auto;
-      }
-      .navbar {
-        width: 98vw;
-        background-color: #333;
-        color: white;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        padding: 8px;
-        z-index: 1000;
-      }
-      .navbar a {
-        color: white;
-        text-decoration: none;
-        padding: 2px 15px;
-      }
-      .navbar a:hover {
-        background-color: #575757;
-        border-radius: 4px;
-      }
-      .dropdown {
-        position: relative;
-        display: inline-block;
-      }
-      .img {
-        border-radius: 10px;
-      }
-      .dropdown-content {
-        display: none;
-        position: absolute;
-        background-color: #f4f4f4;
-        box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-        z-index: 1;
-        right: 0; /* Adjust based on the alignment needed */
-      }
-      .dropdown-content button {
-        background-color: white;
-        color: black;
-        padding: 12px 16px;
-        text-decoration: none;
-        display: block;
-        border: none;
-        width: 100%;
-        text-align: left;
-      }
-      .dropdown-content button:hover {
-        background-color: #ddd;
-      }
-      .registration-button {
-        padding: 10px 20px;
-        background-color: #17a2b8;
-        color: white;
-        border: none;
-        border-radius: 4px;
-        cursor: pointer;
-        font-size: 16px;
-      }
-
-      .home {
-        height: 88vh;
-        width: 99vw;
-      }
-
-      .text {
-        text-align: center;
-        width: 100%;
-        margin: 200px auto;
-      }
-      /* Responsive adjustments */
-      @media screen and (max-width: 768px) {
-        .navbar {
-          flex-direction: column;
-          align-items: stretch;
-          padding-top: 20px;
-        }
-        .navbar-links {
-          margin-top: 10px;
-          flex-direction: column;
-          align-items: stretch;
-        }
-        .dropdown {
-          margin-top: 10px;
-        }
-      }
-    </style>
-    <script>
-      function toggleDropdown() {
-        var dropdown = document.getElementById("dropdown-content");
-        if (dropdown.style.display === "block") {
-          dropdown.style.display = "none";
-        } else {
-          dropdown.style.display = "block";
-        }
-      }
-      // Close the dropdown if the user clicks outside of it
-      window.onclick = function (event) {
-        if (!event.target.matches(".registration-button")) {
-          var dropdowns = document.getElementsByClassName("dropdown-content");
-          for (var i = 0; i < dropdowns.length; i++) {
-            var openDropdown = dropdowns[i];
-            if (openDropdown.style.display === "block") {
-              openDropdown.style.display = "none";
-            }
-          }
-        }
-      };
-    </script>
+    <title>Responsive Navbar with Dropdowns</title>
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <div class="navbar">
-      <div class="navbar-brand">
-        <img
-          class="img"
-          src="khanadotcom.jpg"
-          alt="random"
-          height="50px"
-          width="50px" />
+      <div class="nav-left">
+        <img src="khanadotcom.jpg" alt="random" />
       </div>
-      <div class="navbar-links">
-        <a href="/">Home</a>
-        <a href="#">About</a>
-        <a href="/contactus.html">Contact</a>
+      <div class="nav-right">
         <div class="dropdown">
-          <button class="registration-button" onclick="toggleDropdown()">
+          <button onclick="toggleDropdown('dropdown1')" class="dropbtn">
             Registration
           </button>
-          <div id="dropdown-content" class="dropdown-content">
-            <button onclick="window.location.href='customer.html'">
-              Customer
-            </button>
-            <button onclick="window.location.href='Delivery.html'">
-              Delivery Person
-            </button>
-            <button onclick="window.location.href='Restaurant.html'">
-              Restaurant
-            </button>
+          <div id="dropdown1" class="dropdown-content">
+            <a href="customer.html"
+              ><i class="fa-solid fa-user-group"></i>Customer
+            </a>
+            <a href="Delivery.html"
+              ><i class="fa-solid fa-truck-ramp-box"></i>Delivery Person</a
+            >
+            <a href="Restaurant.html"
+              ><i class="fa-solid fa-utensils"></i>Restaurant</a
+            >
           </div>
         </div>
-        <a href="userform/Login.html">Login</a>
+        <div class="dropdown">
+          <button onclick="toggleDropdown('dropdown2')" class="dropbtn">
+            <i class="fa-solid fa-user"></i>
+          </button>
+          <div id="dropdown2" class="dropdown-content">
+            <a href="userform/Login.html"
+              ><i class="fa-regular fa-user"></i>Login</a
+            >
+            <a href="contactus.html"
+              ><i class="fa-regular fa-address-book"></i>Contactus</a
+            >
+            <a href="otp/otpform.html">Otp Form</a>
+          </div>
+        </div>
       </div>
     </div>
-    <!-- Add your content here -->
-    <h1 class="text">Welcome to Khanadotcom.</h1>
+
+    <h1 class="text">Welcome to KhanaDotCom</h1>
+    <div class="link">
+      <a href="contactus.html">Contact us</a>
+      <a href="About.html">About us</a>
+    </div>
+    <script src="script.js"></script>
+    <script
+      src="https://kit.fontawesome.com/8a33eecc9b.js"
+      crossorigin="anonymous"></script>
   </body>
 </html>
