--- a/index.html
+++ b/index.html
@@ -79,13 +79,13 @@
       data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active" data-bs-interval="10000">
-          <img src="/carusalimg1.png" class="d-block w-100" alt="..." />
+          <img src="carusalimg1.png" class="d-block w-100" alt="..." />
         </div>
         <div class="carousel-item" data-bs-interval="2000">
-          <img src="/carusalimg2.png" class="d-block w-100" alt="..." />
+          <img src="carusalimg2.png" class="d-block w-100" alt="..." />
         </div>
         <div class="carousel-item">
-          <img src="/carusalimg3.png" class="d-block w-100" alt="..." />
+          <img src="carusalimg3.png" class="d-block w-100" alt="..." />
         </div>
       </div>
       <button
