--- a/menu/menu.html
+++ b/menu/menu.html
@@ -77,7 +77,9 @@
             <p>Min. Order: ₹52.00 | Delivery Fee: ₹0.00</p>
             <p><strong>Delivery: 15% OFF | Collection: 20% OFF</strong></p>
           </div>
-          <a href="index1.html"> <button class="button">View Menu</button></a>
+          <a href="menudetails.html">
+            <button class="button">View Menu</button></a
+          >
         </div>
 
         <div class="restaurant-item">
@@ -92,7 +94,9 @@
             <p><strong>Delivery: 20% OFF | Collection: 20% OFF</strong></p>
           </div>
 
-          <a href="index1.html"> <button class="button">View Menu</button></a>
+          <a href="menudetails.html">
+            <button class="button">View Menu</button></a
+          >
         </div>
 
         <div class="restaurant-item">
@@ -106,7 +110,9 @@
             <p>Min. Order: ₹42.00 | Delivery Fee: ₹0.00</p>
             <p><strong>Delivery: 15% OFF | Collection: 20% OFF</strong></p>
           </div>
-          <a href="index1.html"> <button class="button">View Menu</button></a>
+          <a href="menudetails.html">
+            <button class="button">View Menu</button></a
+          >
         </div>
 
         <div class="restaurant-item">
@@ -120,7 +126,9 @@
             <p>Min. Order: ₹65.00 | Delivery Fee: ₹0.00</p>
             <p><strong>Delivery: 35% OFF | Collection: 20% OFF</strong></p>
           </div>
-          <a href="index1.html"> <button class="button">View Menu</button></a>
+          <a href="menudetails.html">
+            <button class="button">View Menu</button></a
+          >
         </div>
 
         <div class="restaurant-item">
@@ -134,7 +142,9 @@
             <p>Min. Order: ₹72.00 | Delivery Fee: ₹0.00</p>
             <p><strong>Delivery: 25% OFF | Collection: 20% OFF</strong></p>
           </div>
-          <a href="index1.html"> <button class="button">View Menu</button></a>
+          <a href="menudetails.html">
+            <button class="button">View Menu</button></a
+          >
         </div>
       </section>
     </main>
