--- a/index.html
+++ b/index.html
@@ -3,25 +3,25 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Responsive Navbar with Dropdowns</title>
+    <title>Navbar with Dropdowns</title>
     <link rel="stylesheet" href="styles.css" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-      crossorigin="anonymous" />
   </head>
   <body>
-    <div class="navbar">
-      <div class="nav-left">
-        <img class="img1" src="khanadotcom.jpg" alt="random" />
+    <nav class="navbar">
+      <div class="navbar-left">
+        <a href="#" class="navbar-brand"
+          ><img
+            src="khanadotcom.jpg"
+            alt="Not found"
+            height="50px"
+            width="50px"
+        /></a>
       </div>
-      <div class="nav-right">
+      <h2>KhanaDotCom</h2>
+      <div class="navbar-right">
         <div class="dropdown">
-          <button onclick="toggleDropdown('dropdown3')" class="dropbtn">
-            Filter
-          </button>
-          <div id="dropdown3" class="dropdown-content">
+          <button class="dropbtn">Filter</button>
+          <div class="dropdown-content">
             <label><input type="checkbox" name="option1" /> Dosha</label>
             <label><input type="checkbox" name="option2" /> Most Rated</label>
             <label
@@ -30,12 +30,9 @@
             <label><input type="checkbox" name="option4" /> Subway</label>
           </div>
         </div>
-
         <div class="dropdown">
-          <button onclick="toggleDropdown('dropdown1')" class="dropbtn">
-            Registration
-          </button>
-          <div id="dropdown1" class="dropdown-content">
+          <button class="dropbtn">Registration</button>
+          <div class="dropdown-content">
             <a href="customer.html">
               <i class="fa-solid fa-user-group"></i> Customer
             </a>
@@ -48,10 +45,8 @@
           </div>
         </div>
         <div class="dropdown">
-          <button onclick="toggleDropdown('dropdown2')" class="dropbtn">
-            <i class="fa-solid fa-bars"></i>
-          </button>
-          <div id="dropdown2" class="dropdown-content">
+          <button class="dropbtn"><i class="fa-solid fa-bars"></i></button>
+          <div class="dropdown-content">
             <a href="menu/menu.html">
               <i class="fa-solid fa-calendar-days"></i>Menu
             </a>
@@ -71,55 +66,7 @@
           </div>
         </div>
       </div>
-    </div>
-
-    <div
-      id="carouselExampleInterval"
-      class="carousel slide"
-      data-bs-ride="carousel">
-      <div class="carousel-inner">
-        <div class="carousel-item active" data-bs-interval="10000">
-          <img src="carusalimg1.png" class="d-block w-100" alt="..." />
-        </div>
-        <div class="carousel-item" data-bs-interval="2000">
-          <img src="carusalimg2.png" class="d-block w-100" alt="..." />
-        </div>
-        <div class="carousel-item">
-          <img src="carusalimg3.png" class="d-block w-100" alt="..." />
-        </div>
-      </div>
-      <button
-        class="carousel-control-prev"
-        type="button"
-        data-bs-target="#carouselExampleInterval"
-        data-bs-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Previous</span>
-      </button>
-      <button
-        class="carousel-control-next"
-        type="button"
-        data-bs-target="#carouselExampleInterval"
-        data-bs-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Next</span>
-      </button>
-    </div>
-
-    <!-- <div class="option">
-      <div class="services">
-        <p>24*7 Delivery</p>
-      </div>
-      <div class="services">
-        <p>50 Delivery</p>
-      </div>
-      <div class="services">
-        <p>Fast Delivery</p>
-      </div>
-      <div class="services">
-        <p>few minutes Delivery</p>
-      </div>
-    </div> -->
+    </nav>
 
     <div class="container">
       <div class="restaurant-card">
@@ -188,56 +135,42 @@
       </div>
     </div>
 
-    <!-- <div class="home">
-      <div class="text"><h1 class="text">Welcome to KhanaDotCom</h1></div>
-      <div class="img">
-        <img
-          height="98%"
-          width="95%"
-          style:{
-          border-radius="10px"
-          }
-          src="https://img.freepik.com/free-photo/exploding-burger-with-vegetables-melted-cheese-black-background-generative-ai_157027-1734.jpg?t=st=1718124598~exp=1718128198~hmac=80fa493d3dcb33104ee47cb4f78848d30012d46bade73ef889f4441ef0517b3a&w=1380"
-          alt="not found img" />
-      </div> 
-    </div>-->
-    <div class="link">
-      <div class="about">
+    <footer class="footer">
+      <div class="footer-section">
         <a href="About.html"><h3>About Us</h3></a>
         <div class="aboutchild">
           <p>
-            information About khanadotcom,<br />
+            Information about khanadotcom,<br />
             the services we offer<br />
             and our mission.
           </p>
         </div>
       </div>
-      <div class="about">
+      <div class="footer-section">
         <a href="contactus.html"><h3>Contact Us</h3></a>
-        <p>Email:khanadotcom@gmail.com</p>
-        <p>Phone:+91 122-233-4452</p>
+        <p>Email: khanadotcom@gmail.com</p>
+        <p>Phone: +91 122-233-4452</p>
       </div>
-      <div class="about">
+      <div class="footer-section">
         <a href="About.html"><h3>Social Media</h3></a>
         <p>
-          <a href=""><i class="fa-brands fa-linkedin"></i></a>
-          <a href=""> <i class="fa-brands fa-facebook"></i></a>
-          <a href=""><i class="fa-brands fa-square-instagram"></i></a>
-          <a href=""><i class="fa-brands fa-youtube"></i></a>
+          <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+          <a href="#"><i class="fa-brands fa-facebook"></i></a>
+          <a href="#"><i class="fa-brands fa-square-instagram"></i></a>
+          <a href="#"><i class="fa-brands fa-youtube"></i></a>
         </p>
       </div>
-      <div class="about">
+      <div class="footer-section">
         <a href="About.html"><h3>Privacy Policy</h3></a>
         <p>Read our Privacy Policy</p>
       </div>
-    </div>
+
+      <p>© 2024 Brand. All Rights Reserved.</p>
+    </footer>
+
     <script src="script.js"></script>
     <script
       src="https://kit.fontawesome.com/8a33eecc9b.js"
-      crossorigin="anonymous"></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"></script>
   </body>
 </html>
